--- a/SuperheroesMVVM/App.xaml
+++ b/SuperheroesMVVM/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:SuperheroesMVVM"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ControlTemplate x:Key="ButtonControlFlechaTemplate" TargetType="{x:Type Button}">
+            <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" ContentStringFormat="{TemplateBinding ContentStringFormat}" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+        </ControlTemplate>
     </Application.Resources>
 </Application>
